fix: update z-index values for adContainer and mute-button for proper layering

--- a/template/style.css
+++ b/template/style.css
@@ -10,7 +10,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 999;
 }
 
 /* visually hide the <img> but keep it in the DOM */
@@ -25,7 +25,7 @@
   position: absolute;
   top: 16px;
   left: 16px;
-  z-index: 30;
+  z-index: 9999;
   align-items: center;
   width: 44px;
   height: 44px;
